fix alignment of introduction

--- a/css/base.css
+++ b/css/base.css
@@ -237,7 +237,7 @@ img.hexagon {
     -webkit-filter: grayscale(1);
     filter: grayscale(1) contrast(1);
 
-    margin-left: -60px;
+    margin-left: -55px;
 
 }
 
@@ -254,7 +254,8 @@ p.intro {
     display: inline;
     animation-duration: 1.5s;
     animation-delay: 0s;
-    padding-left: 35px;
+    padding-left: 30px;
+    margin-left: 40px;
     margin-top: 0px;
 }
 
@@ -267,7 +268,7 @@ p.description {
     float: right;
     animation-duration: 1.0s;
     animation-delay: 3.0s;
-    margin-top: -28px;
+    margin-top: -25px;
     margin-right:  -60px;
 }
 
